fixing misaligned footer text

--- a/style.css
+++ b/style.css
@@ -3654,7 +3654,6 @@ article.panel-placeholder {
 
 	.site-info {
 		float: left;
-		margin-left: 6%;
 		padding: 0.5em 0 0;
 		width: 58%;
 	}
